--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qianbai.newexg">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".QBApplication"
         android:allowBackup="true"
@@ -10,7 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,13 +19,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".TestActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".BackPWDActivity"></activity>
-
-
+        <activity android:name=".TestActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".BackPWDActivity" />
+        <activity android:name=".ComQueryActivity" />
+        <activity android:name=".PerQueryActivity" />
+        <activity android:name=".MapNavgActivity" />
+        <activity android:name=".ClueListActivity" />
+        <activity android:name=".ModifyPSWActivity" />
+        <activity android:name=".MsgListActivity" />
+        <activity android:name=".ComListActivity" />
+        <activity android:name=".ComDelActivity" />
+        <activity android:name=".PerListActivity" />
+        <activity android:name=".PerDelActivity"></activity>
     </application>
-
 
 </manifest>
