--- a/App/build.gradle
+++ b/App/build.gradle
@@ -57,9 +57,16 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    //图表
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
+    //状态栏
     compile 'com.jaeger.statusbarutil:library:1.4.0'
+    //json解析
+    compile 'com.alibaba:fastjson:1.1.57.android'
+
+    //悬浮
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:design:27.1.1'
 
 
 }
