--- a/App/build.gradle
+++ b/App/build.gradle
@@ -19,7 +19,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //根据需要 自行选择添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
+            abiFilters 'armeabi'
+//            , 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
 //             还可以添加
         }
         useLibrary 'org.apache.http.legacy'//找不到DefaultHttpClient时使用
